fix overflow image + added product section

--- a/src/styles/image.module.css
+++ b/src/styles/image.module.css
@@ -1,7 +1,12 @@
 .img {
-    max-width: 460px;
+    max-width: 480px;
     margin: 0 auto;
-    width: 100vh;
+    width: 100vw;
     height: auto;
-    aspect-ratio: 16 / 9;
+}
+
+@media (min-width: 480px) {
+    .img {
+        max-width: 100%;
+    }
 }
